update ypp suspension status
