# packages/api/api-spec.json
@@ -80,7 +80,7 @@
             "required": true,
             "in": "path",
             "schema": {
-              "type": "string"
+              "type": "number"
             }
           }
         ],
@@ -99,18 +99,20 @@
         "tags": [
           "channels"
         ]
-      },
+      }
+    },
+    "/channels/yt-syncing/{joystreamChannelId}": {
       "put": {
         "operationId": "ChannelsController_updateChannel",
         "summary": "",
-        "description": "Updates given channel. Note: only 'shouldBeIngested' is available for update at the moment",
+        "description": "Updates given channel YT syncing status. Note: only 'shouldBeIngested' is available for update at the moment",
         "parameters": [
           {
             "name": "joystreamChannelId",
             "required": true,
             "in": "path",
             "schema": {
-              "type": "string"
+              "type": "number"
             }
           }
         ],
@@ -131,6 +133,54 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/ChannelDto"
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "channels"
+        ]
+      }
+    },
+    "/channels/suspend": {
+      "put": {
+        "operationId": "ChannelsController_suspendChannels",
+        "summary": "",
+        "description": "Authenticated endpoint to suspend given channel/s from YPP program",
+        "parameters": [
+          {
+            "name": "ypp_owner_key",
+            "required": true,
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "array",
+                "items": {
+                  "$ref": "#/components/schemas/SuspendChannelDto"
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "default": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ChannelDto"
+                  }
                 }
               }
             }
@@ -448,6 +498,9 @@
           "shouldBeIngested": {
             "type": "boolean"
           },
+          "isSuspended": {
+            "type": "boolean"
+          },
           "joystreamChannelId": {
             "type": "number"
           },
@@ -463,6 +516,7 @@
           "description",
           "aggregatedStats",
           "shouldBeIngested",
+          "isSuspended",
           "joystreamChannelId",
           "thumbnails",
           "tier"
@@ -492,6 +546,21 @@
         },
         "required": [
           "shouldBeIngested"
+        ]
+      },
+      "SuspendChannelDto": {
+        "type": "object",
+        "properties": {
+          "joystreamChannelId": {
+            "type": "number"
+          },
+          "isSuspended": {
+            "type": "boolean"
+          }
+        },
+        "required": [
+          "joystreamChannelId",
+          "isSuspended"
         ]
       },
       "VideoDto": {
