# packages/api/src/dtos.ts
@@ -1,7 +1,7 @@
 import { MemberId } from '@joystream/types/primitives'
 import { ApiProperty, PickType } from '@nestjs/swagger'
 import { User, Channel, Video, VideoState } from '@youtube-sync/domain'
-import { IsEmail } from 'class-validator'
+import { IsEmail, IsNotEmpty } from 'class-validator'
 
 // NestJS Data Transfer Objects (DTO)s
 
@@ -23,6 +23,7 @@ export class ChannelDto {
   @ApiProperty() description: string
   @ApiProperty() aggregatedStats: number
   @ApiProperty() shouldBeIngested: boolean
+  @ApiProperty() isSuspended: boolean
   @ApiProperty() joystreamChannelId: number
   @ApiProperty() thumbnails: ThumbnailsDto
   @ApiProperty() tier: number
@@ -33,6 +34,7 @@ export class ChannelDto {
     this.tier = channel.tier
     this.joystreamChannelId = channel.joystreamChannelId
     this.shouldBeIngested = channel.shouldBeIngested
+    this.isSuspended = channel.isSuspended
     this.aggregatedStats = channel.aggregatedStats
     this.thumbnails = channel.thumbnails
   }
@@ -50,7 +52,7 @@ export class UserDto {
 // Dto for verifying Youtube channel given the authorization code
 export class VerifyChannelRequest {
   // Authorization code send to the backend after user o-auth verification
-  @ApiProperty({ required: true }) authorizationCode: string
+  @IsNotEmpty() @ApiProperty({ required: true }) authorizationCode: string
 }
 
 // Dto for verified Youtube channel response
@@ -65,19 +67,19 @@ export class VerifyChannelResponse {
 // Dto for saving the verified Youtube channel
 export class SaveChannelRequest {
   // Authorization code send to the backend after user o-auth verification
-  @ApiProperty({ required: true }) authorizationCode: string
+  @IsNotEmpty() @ApiProperty({ required: true }) authorizationCode: string
 
   // Authorization code send to the backend after user O-auth verification
-  @ApiProperty({ required: true }) userId: string
+  @IsNotEmpty() @ApiProperty({ required: true }) userId: string
 
   // Email of the user
   @IsEmail() @ApiProperty({ required: true }) email: string
 
   // Joystream Channel ID of the user verifying his Youtube Channel for YPP
-  @ApiProperty({ required: true }) joystreamChannelId: number
+  @IsNotEmpty() @ApiProperty({ required: true }) joystreamChannelId: number
 
   // referrer Channel ID
-  @ApiProperty({ required: false }) referrerChannelId: number
+  @IsNotEmpty() @ApiProperty({ required: false }) referrerChannelId: number
 }
 
 // Dto for save channel response
@@ -106,4 +108,9 @@ export class VideoDto extends Video {
 
 export class UpdateChannelDto extends PickType(Channel, ['shouldBeIngested']) {
   @ApiProperty() shouldBeIngested: boolean
+}
+
+export class SuspendChannelDto {
+  @IsNotEmpty() @ApiProperty({ required: true }) @IsNotEmpty() joystreamChannelId: number
+  @IsNotEmpty() @ApiProperty({ required: true }) @IsNotEmpty() isSuspended: boolean
 }
